# ds-controller

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.example.mk  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
nds/: Makefile  ds-controller.ini
nds/arm7/: Makefile
nds/arm7/source/: main.c
nds/common/: backlight.h
nds/source/: config.h  display.c  display.h  display_policy.c  display_policy.h  input.c  input.h  main.c  network.c  network.h  protocol.c  protocol.h  runtime_config.c  runtime_config.h
nds/tests/: Makefile  display_policy_test.c  protocol_test.c  runtime_config_test.c
pc/: Cargo.toml
pc/app/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
pc/app/src/: App.tsx  index.css  main.tsx
pc/app/src-tauri/: Cargo.toml  tauri.conf.json
pc/app/src-tauri/capabilities/: default.json
pc/app/src-tauri/src/: app_state.rs  commands.rs  dto.rs  lib.rs  log_event.rs  main.rs  receiver_task.rs  settings.rs
pc/app/src/app/: reducer.test.ts  reducer.ts  tauriCommands.ts  tauriEvents.ts  types.ts  validation.test.ts  validation.ts
pc/app/src/components/: ButtonBadges.tsx  HeaderBar.tsx  LogPanel.tsx  MetricItem.tsx  ReceiverCard.tsx  RuntimeStatusCard.tsx  SenderCard.tsx  StatusBadge.tsx  ViGemStatusCard.tsx  statusFormat.ts
pc/app/src/lib/: utils.ts
pc/receiver/: Cargo.toml
pc/receiver/src/: backend.rs  lib.rs  receiver.rs
pc/src/: main.rs  mapping.rs  protocol.rs  receiver.rs
scripts/: cargo-xwin-runner.sh
(+1 files in other folders)
