[package]
name = "ds-controller-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "ds_controller_app"
crate-type = ["rlib"]

[[bin]]
name = "ds-controller"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ds-controller-receiver = { path = "../../receiver" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
